# GamePerfBench

./: .gitignore  CLAUDE.md  GamePerfBench_Development_Plan.md  README.md  main.py  pyproject.toml  pytest_full.txt  pytest_output.txt  requirements.txt
.claude/: settings.local.json
config/: benchmark_config.yaml
config/games/: game_profiles.yaml
config/presets/: custom.yaml  high.yaml  low.yaml  medium.yaml  ultra.yaml
src/: __init__.py
src/analysis/: __init__.py  percentile_calculator.py  statistical_analyzer.py  stutter_detector.py
src/capture/: __init__.py  fps_capture.py  frametime_capture.py
src/core/: __init__.py  benchmark_runner.py  frame_analyzer.py  metrics_collector.py  models.py  variance_checker.py
src/reporting/: __init__.py  chart_generator.py  csv_exporter.py  html_reporter.py  report_packager.py
src/utils/: __init__.py  config_loader.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli.py  test_simulated_benchmark.py
tests/integration/: test_chart_generator.py  test_csv_exporter.py  test_html_reporter.py  test_report_packager.py
tests/test_data/: sample_frametimes.csv
tests/unit/: test_fps_calculator.py  test_models.py  test_percentile_calculator.py  test_simulated_capture.py  test_stutter_detector.py  test_variance_checker.py
